<resources>
    <string name="app_name">Pace Pal</string>
    <string name="title_home">Friends</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Profile</string>
    <string name="competitive_mode">Competitive Mode</string>
    <string name="collaborative_mode">Collaborative Mode</string>
    <string name="social_mode">Social Mode</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="access_token">pk.eyJ1IjoibWFyaXNzYXBhbG9zIiwiYSI6ImNqb3FmNW9jYTA0ZTgzcW5oeTM5enVzdTgifQ.UKW-2-rZg6l5frL0-9Cl2Q</string>
    <string name="server_client_id">585804179972-1ff5a1k8j68082icri5adilt8lkgjvi1.apps.googleusercontent.com</string>
    <string name="continue_to_menu">Continue to Menu</string>
    <string name="welcome_to_pacepal">Welcome to Pace Pal</string>
    <string name="first_name">First Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>

    //Facebook sign in strings
    <string name="facebook_app_id">2166744710299582</string>
    <string name="fb_login_protocol_scheme">fb2166744710299582</string>
    <string name="lorem_ipsum">lorem ipsum</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Add to strings resource file -->
    <string-array name="Miles_Array">
        <item>1 Mile</item>
        <item>2 Mile</item>
        <item>3 Mile</item>
        <item>4 Miles</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- Strings for position read by TTS -->
    <string name="first_place">First Place</string>
    <string name="second_place">Second Place</string>
    <string name="third_place">Third Place</string>
    <string name="four_place">Fourth Place </string>


</resources>
